tests/e2e-openshift-upgrade/upgrade/install-tempo-monolithic.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chainsaw-mmo-rbac
