tests/e2e-openshift-upgrade/upgrade/00-assert-install-operators-from-marketplace.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: tempo-operator
  namespace: openshift-tempo-operator
status:
  readyReplicas: 1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: opentelemetry-operator
  namespace: openshift-opentelemetry-operator
status:
  readyReplicas: 1
