tests/e2e-openshift-upgrade/upgrade/01-assert-install-storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: chainsaw-rbac
status:
  readyReplicas: 1
