tests/e2e-openshift-upgrade/upgrade/assert-upgrade.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: tempo-operator
  namespace: openshift-tempo-operator
status:
  readyReplicas: 1
