tests/e2e-openshift-upgrade/upgrade/05-assert-install-otelcol-tempomonolithic.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-collector
  namespace: chainsaw-mmo-rbac
status:
  readyReplicas: 1

---
apiVersion: v1
kind: Service
metadata:
  name: dev-collector
  namespace: chainsaw-mmo-rbac
spec:
  ports:
  - appProtocol: grpc
    name: otlp-grpc-grpc
    port: 4317
    protocol: TCP
    targetPort: 4317
  - appProtocol: http
    name: otlp-http-http
    port: 4318
    protocol: TCP
    targetPort: 4318
  selector:
    app.kubernetes.io/component: opentelemetry-collector
    app.kubernetes.io/instance: chainsaw-mmo-rbac.dev
    app.kubernetes.io/managed-by: opentelemetry-operator
    app.kubernetes.io/part-of: opentelemetry
