tests/e2e-openshift-upgrade/upgrade/install-storage.yaml
# The namespace is auto-deleted by chainsaw after the test run.
apiVersion: v1
kind: Namespace
metadata:
  name: chainsaw-rbac
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: chainsaw-rbac
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minio
    spec:
      containers:
        - command:
            - /bin/sh
            - -c
            - |
              mkdir -p /storage/tempo && \
              minio server /storage
          image: quay.io/minio/minio:latest
          name: minio
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath: /storage
              name: storage
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: minio
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: chainsaw-rbac
spec:
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app.kubernetes.io/name: minio
  type: ClusterIP
