tests/e2e-openshift-upgrade/upgrade/assert-install-tempostack.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: simplst
    app.kubernetes.io/managed-by: tempo-operator
    app.kubernetes.io/name: tempo
  name: tempo-simplst-gateway
  namespace: chainsaw-rbac
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: gateway
      app.kubernetes.io/instance: simplst
      app.kubernetes.io/managed-by: tempo-operator
      app.kubernetes.io/name: tempo
  template:
    metadata:
      labels:
        app.kubernetes.io/component: gateway
        app.kubernetes.io/instance: simplst
        app.kubernetes.io/managed-by: tempo-operator
        app.kubernetes.io/name: tempo
    spec:
      containers:
      - args:
        - --traces.tenant-header=x-scope-orgid
        - --web.listen=0.0.0.0:8080
        - --web.internal.listen=0.0.0.0:8081
        - --traces.write.otlpgrpc.endpoint=tempo-simplst-distributor.chainsaw-rbac.svc.cluster.local:4317
        - --traces.write.otlphttp.endpoint=https://tempo-simplst-distributor.chainsaw-rbac.svc.cluster.local:4318
        - --traces.write-timeout=30s
        - --traces.tempo.endpoint=https://tempo-simplst-query-frontend.chainsaw-rbac.svc.cluster.local:3200
        - --grpc.listen=0.0.0.0:8090
        - --rbac.config=/etc/tempo-gateway/cm/rbac.yaml
        - --tenants.config=/etc/tempo-gateway/secret/tenants.yaml
        - --log.level=info
        - --tls.internal.server.key-file=/var/run/tls/server/tls.key
        - --tls.internal.server.cert-file=/var/run/tls/server/tls.crt
        - --traces.tls.key-file=/var/run/tls/server/tls.key
        - --traces.tls.cert-file=/var/run/tls/server/tls.crt
        - --traces.tls.ca-file=/var/run/ca/service-ca.crt
        - --traces.tls.watch-certs=true
        - --tls.cipher-suites=TLS_AES_128_GCM_SHA256,TLS_AES_256_GCM_SHA384,TLS_CHACHA20_POLY1305_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256
        - --tls.min-version=VersionTLS12
        - --tls.server.cert-file=/etc/tempo-gateway/serving-certs/tls.crt
        - --tls.server.key-file=/etc/tempo-gateway/serving-certs/tls.key
        - --tls.healthchecks.server-ca-file=/etc/tempo-gateway/cabundle/service-ca.crt
        - --tls.healthchecks.server-name=tempo-simplst-gateway.chainsaw-rbac.svc.cluster.local
        - --web.healthchecks.url=https://localhost:8080
        - --tls.client-auth-type=NoClientCert
        - --traces.query-rbac=true
        name: tempo-gateway
        ports:
        - containerPort: 8090
          name: grpc-public
          protocol: TCP
        - containerPort: 8081
          name: internal
          protocol: TCP
        - containerPort: 8080
          name: public
          protocol: TCP
      - args:
        - --log.level=warn
        - --web.listen=:8082
        - --web.internal.listen=:8083
        - --web.healthchecks.url=http://localhost:8082
        - --opa.package=tempostack
        - --opa.ssar
        - --opa.matcher=kubernetes_namespace_name
        - --openshift.mappings=dev=tempo.grafana.com
        - --openshift.mappings=prod=tempo.grafana.com
        name: tempo-gateway-opa
        ports:
        - containerPort: 8082
          name: public
          protocol: TCP
        - containerPort: 8083
          name: opa-metrics
          protocol: TCP
status:
  availableReplicas: 1
  readyReplicas: 1
  replicas: 1
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: simplst
    app.kubernetes.io/managed-by: tempo-operator
    app.kubernetes.io/name: tempo
  name: tempo-simplst-gateway
  namespace: chainsaw-rbac
  ownerReferences:
    - apiVersion: tempo.grafana.com/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: TempoStack
      name: simplst
spec:
  port:
    targetPort: public
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: tempo-simplst-gateway
    weight: 100
  wildcardPolicy: None
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: tempo-simplst-gateway-tls
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: simplst
    app.kubernetes.io/managed-by: tempo-operator
    app.kubernetes.io/name: tempo
  name: tempo-simplst-gateway
  namespace: chainsaw-rbac
  ownerReferences:
    - apiVersion: tempo.grafana.com/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: TempoStack
      name: simplst
spec:
  ports:
  - name: grpc-public
    port: 8090
    protocol: TCP
    targetPort: grpc-public
  - name: internal
    port: 8081
    protocol: TCP
    targetPort: internal
  - name: public
    port: 8080
    protocol: TCP
    targetPort: public
  selector:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: simplst
    app.kubernetes.io/managed-by: tempo-operator
    app.kubernetes.io/name: tempo
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo-simplst-compactor
  namespace: chainsaw-rbac
status:
  readyReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo-simplst-distributor
  namespace: chainsaw-rbac
status:
  readyReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo-simplst-querier
  namespace: chainsaw-rbac
status:
  readyReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo-simplst-query-frontend
  namespace: chainsaw-rbac
status:
  readyReplicas: 1
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tempo-simplst-ingester
  namespace: chainsaw-rbac
status:
  readyReplicas: 1
